feat: added swagger aggregator
